--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -169,11 +169,11 @@ LastLevel=/Game/_Level/DevLevel
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
@@ -199,6 +199,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
+OpenAssetsAtExit=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker.CamSwitchWithTracker
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1455,33 +1456,33 @@ Info=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.Materia
 CapsuleComponent=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/DevLevel
-MRUItem1=/Game/NewGameplayBuild/DevLevelStuf/M_COllerGridRed
-MRUItem2=/Game/_PlaceHolderts/90s_Style_Graphics/Materials/Masters/JPG/Red
-MRUItem3=/Game/NewGameplayBuild/DevLevelStuf/M_COllerGridBlue
-MRUItem4=/Game/NewGameplayBuild/DevLevelStuf/M_COllerGridGreen
-MRUItem5=/Game/_Level/_LevelAssets/_Environment_Assets/coffee_truck/Coffe_truck_BP
-MRUItem6=/Game/_Level/_LevelAssets/_OGFiles/sheet_metal_M
-MRUItem7=/Game/_Level/_LevelAssets/_Environment_Assets/coffee_truck/Wheel
-MRUItem8=/Game/_Level/_LevelAssets/_decals/whale_logo/Whale_ThumbsUp_V2
-MRUItem9=/Game/_Level/_LevelAssets/_decals/whale_logo/Whale_Dam4
-MRUItem10=/Game/_Level/_LevelAssets/_decals/whale_logo/Whale_Dam2
-MRUItem11=/Game/_Level/_LevelAssets/_decals/whale_logo/Whale_Dam1
-MRUItem12=/Game/_Level/_LevelAssets/_decals/whale_logo/Whale_Dam3
-MRUItem13=/Game/_Level/_LevelAssets/_decals/whale_logo/whale_logo_decal_M
-MRUItem14=/Game/_Level/_LevelAssets/_Environment_Assets/container/ContainerBP
-MRUItem15=/Game/_Level/_LevelAssets/_Environment_Assets/container/ContainerBP_yellow1
-MRUItem16=/Game/_Level/_LevelAssets/_Environment_Assets/container/ContainerBP_blue
-MRUItem17=/Game/_Level/_LevelAssets/_Environment_Assets/container/ContainerBP_Green
-MRUItem18=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Skeleton
-MRUItem19=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Attack_Anim
-MRUItem20=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Execution_Anim
-MRUItem21=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Walk_Anim
-MRUItem22=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_TurnRight_Anim
-MRUItem23=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_TurnLeft_Anim
-MRUItem24=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Idle_Anim
-MRUItem25=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Death_Anim
-MRUItem26=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker
+MRUItem0=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker
+MRUItem1=/Game/_Level/DevLevel
+MRUItem2=/Game/NewGameplayBuild/DevLevelStuf/M_COllerGridRed
+MRUItem3=/Game/_PlaceHolderts/90s_Style_Graphics/Materials/Masters/JPG/Red
+MRUItem4=/Game/NewGameplayBuild/DevLevelStuf/M_COllerGridBlue
+MRUItem5=/Game/NewGameplayBuild/DevLevelStuf/M_COllerGridGreen
+MRUItem6=/Game/_Level/_LevelAssets/_Environment_Assets/coffee_truck/Coffe_truck_BP
+MRUItem7=/Game/_Level/_LevelAssets/_OGFiles/sheet_metal_M
+MRUItem8=/Game/_Level/_LevelAssets/_Environment_Assets/coffee_truck/Wheel
+MRUItem9=/Game/_Level/_LevelAssets/_decals/whale_logo/Whale_ThumbsUp_V2
+MRUItem10=/Game/_Level/_LevelAssets/_decals/whale_logo/Whale_Dam4
+MRUItem11=/Game/_Level/_LevelAssets/_decals/whale_logo/Whale_Dam2
+MRUItem12=/Game/_Level/_LevelAssets/_decals/whale_logo/Whale_Dam1
+MRUItem13=/Game/_Level/_LevelAssets/_decals/whale_logo/Whale_Dam3
+MRUItem14=/Game/_Level/_LevelAssets/_decals/whale_logo/whale_logo_decal_M
+MRUItem15=/Game/_Level/_LevelAssets/_Environment_Assets/container/ContainerBP
+MRUItem16=/Game/_Level/_LevelAssets/_Environment_Assets/container/ContainerBP_yellow1
+MRUItem17=/Game/_Level/_LevelAssets/_Environment_Assets/container/ContainerBP_blue
+MRUItem18=/Game/_Level/_LevelAssets/_Environment_Assets/container/ContainerBP_Green
+MRUItem19=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Skeleton
+MRUItem20=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Attack_Anim
+MRUItem21=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Execution_Anim
+MRUItem22=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Walk_Anim
+MRUItem23=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_TurnRight_Anim
+MRUItem24=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_TurnLeft_Anim
+MRUItem25=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Idle_Anim
+MRUItem26=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Death_Anim
 MRUItem27=/Game/_Level/_LevelAssets/_CamSwitcher/Cam
 MRUItem28=/Game/_Level/_LevelAssets/_Props/_Outside/Container_Handler
 MRUItem29=/Game/_Level/_LevelAssets/_Props/_Materials/Container_Handler_4_Texture
