--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -170,22 +170,22 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
@@ -214,7 +214,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_Outside
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Crawler_Enemy
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1474,22 +1474,22 @@ cloth_with_poles_C=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Mat
 NavMeshBoundsVolume=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/_LevelAssets/_Props/_Outside/Spider_Web1
-MRUItem1=/Game/_Level/_LevelAssets/_Props/_Materials/Outdoor_Umbrella_Texture
-MRUItem2=/Game/_Level/_LevelAssets/_Props/_Materials/Outdoor_Umbrella_Mat
-MRUItem3=/Game/_Level/_LevelAssets/_Props/_Materials/Outdoor_Table_Texture
-MRUItem4=/Game/_Level/_LevelAssets/_Props/_Materials/Outdoor_Table_Mat
-MRUItem5=/Game/_Level/_LevelAssets/_Props/_Outside/Outdoor_Table
-MRUItem6=/Game/_Level/_LevelAssets/_Props/_Outside/Outdoor_Umbrella
-MRUItem7=/Game/_Level/_LevelAssets/_Props/_Materials/Blue_Trashbin_Texture
-MRUItem8=/Game/_Level/_LevelAssets/_Props/_Materials/Blue_Trashbin
-MRUItem9=/Game/_Level/_LevelAssets/_Props/_Outside/Open_Trashbin
-MRUItem10=/Game/_Level/_LevelAssets/_Props/_Materials/Car3_2_Texture
-MRUItem11=/Game/_Level/_LevelAssets/_Props/_Materials/Car2_3_Mat
-MRUItem12=/Game/_Level/_LevelAssets/_Props/_Outside/Car3
-MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/Spider_Web1_Texture
-MRUItem14=/Game/_Level/_LevelAssets/_Props/_Materials/Spider_Web1_Mat
-MRUItem15=/Game/_Core/_Enemies/Crawler_Enemy/Crawler
+MRUItem0=/Game/_Core/_Enemies/Crawler_Enemy/Crawler
+MRUItem1=/Game/_Level/_LevelAssets/_Props/_Outside/Spider_Web1
+MRUItem2=/Game/_Level/_LevelAssets/_Props/_Materials/Outdoor_Umbrella_Texture
+MRUItem3=/Game/_Level/_LevelAssets/_Props/_Materials/Outdoor_Umbrella_Mat
+MRUItem4=/Game/_Level/_LevelAssets/_Props/_Materials/Outdoor_Table_Texture
+MRUItem5=/Game/_Level/_LevelAssets/_Props/_Materials/Outdoor_Table_Mat
+MRUItem6=/Game/_Level/_LevelAssets/_Props/_Outside/Outdoor_Table
+MRUItem7=/Game/_Level/_LevelAssets/_Props/_Outside/Outdoor_Umbrella
+MRUItem8=/Game/_Level/_LevelAssets/_Props/_Materials/Blue_Trashbin_Texture
+MRUItem9=/Game/_Level/_LevelAssets/_Props/_Materials/Blue_Trashbin
+MRUItem10=/Game/_Level/_LevelAssets/_Props/_Outside/Open_Trashbin
+MRUItem11=/Game/_Level/_LevelAssets/_Props/_Materials/Car3_2_Texture
+MRUItem12=/Game/_Level/_LevelAssets/_Props/_Materials/Car2_3_Mat
+MRUItem13=/Game/_Level/_LevelAssets/_Props/_Outside/Car3
+MRUItem14=/Game/_Level/_LevelAssets/_Props/_Materials/Spider_Web1_Texture
+MRUItem15=/Game/_Level/_LevelAssets/_Props/_Materials/Spider_Web1_Mat
 MRUItem16=/Game/_Core/_Enemies/Crawler_Enemy/Crawler_Mat
 MRUItem17=/Game/_Core/_Enemies/Crawler_Enemy/Crawler_Texture
 MRUItem18=/Game/_Core/_Enemies/Crawler_Enemy/Crawler_Mouth_Texture
@@ -2128,6 +2128,7 @@ ContainerBP_C.WorldPartition=True
 ContainerBP_C.Events=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 StaticMeshComponent.LOD=True
 StaticMeshComponent.RayTracing=True
 StaticMeshComponent.Mobile=True
@@ -2411,7 +2412,6 @@ SkeletalMesh.RayTracing=True
 SkeletalMesh.Sampling=True
 SkeletalMesh.Deformer=True
 SkeletalMesh.Rendering=True
-Texture2D.Interchange =True
 StaticMesh.LevelOfDetail=True
 
 [/Script/UnrealEd.MaterialEditorOptions]
@@ -2750,7 +2750,7 @@ bMaterialQualityUsed[3]=0
 
 [DetailPropertyExpansion]
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+StreamableRenderAsset="\"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 Object=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
@@ -2766,6 +2766,8 @@ PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 BP_Subtitles_C=
+SkeletalMesh="\"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+SkinnedAsset="\"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/_Level/_LevelAssets/_Props/_Outside/Outdoor_Umbrella.Outdoor_Umbrella;
