--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=Windows@DRAGON3DINTERAC
 LastExecutedLaunchName=DRAGON3DINTERAC
 LastExecutedPIEPreviewDevice=
@@ -172,6 +172,8 @@ LastLevel=/Game/_Level/DevLevel
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
@@ -199,8 +201,9 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
+OpenAssetsAtExit=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Isaland_PlayerController.BP_Isaland_PlayerController
+OpenAssetsAtExit=/Game/NewGameplayBuild/BFL/BPFL_D3Di.BPFL_D3Di
+OpenAssetsAtExit=/Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_Carpenter.BP_DI_Carpenter
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -215,7 +218,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_Furniture
+ContentBrowserDrawer.SelectedPaths=/Game/_Level
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1483,36 +1486,36 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 MaterialInstanceConstant=
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/DevLevel
+MRUItem0=/Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_Carpenter
 MRUItem1=/Game/NewGameplayBuild/BFL/BPFL_D3Di
-MRUItem2=/Game/_Level/_LevelAssets/_Props/_Furniture/Lab_Ceiling_Light_On
-MRUItem3=/Game/_Level/_LevelAssets/_Props/_Materials/Truck4_Texture
-MRUItem4=/Game/_Level/_LevelAssets/_Props/_Materials/Truck4_Mat
-MRUItem5=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_On1
-MRUItem6=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Mat_001
-MRUItem7=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Emmission
-MRUItem8=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Mat
-MRUItem9=/Game/_Level/_LevelAssets/_Props/_Furniture/Lab_Ceiling_Light
-MRUItem10=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Texture
-MRUItem11=/Game/_Level/_LevelAssets/_Props/_Materials/Toothbrush1
-MRUItem12=/Game/_Level/_LevelAssets/_Props/_Furniture/Toothbrush
-MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/KitchenMat_Mat
-MRUItem14=/Game/_Level/_LevelAssets/_Props/_Furniture/Kitchen_Mat1
-MRUItem15=/Game/_Level/_LevelAssets/_Props/_Outside/Car3
-MRUItem16=/Game/_Level/_LevelAssets/_Props/_Outside/Car2
-MRUItem17=/Game/_Level/_LevelAssets/_Props/_Outside/Car
-MRUItem18=/Game/_Level/_LevelAssets/_Props/_Outside/Van
-MRUItem19=/Game/_Level/_LevelAssets/_Props/_Outside/Truck
-MRUItem20=/Game/_Level/_LevelAssets/_Props/_Materials/Truck3_Mat
-MRUItem21=/Game/_Level/_LevelAssets/_Props/_Outside/Truck3
-MRUItem22=/Game/_Level/_LevelAssets/_Props/_Materials/Truck3_Texture
-MRUItem23=/Game/_Level/_LevelAssets/_Props/_Materials/Truck2_Mat
-MRUItem24=/Game/_Level/_LevelAssets/_Props/_Materials/Truck1_Mat
-MRUItem25=/Game/_Level/_LevelAssets/_Props/_Outside/Truck2
-MRUItem26=/Game/_Level/_LevelAssets/_Props/_Furniture/Car_Keys
-MRUItem27=/Game/_Level/_LevelAssets/_Props/_Furniture/Monitor
-MRUItem28=/Game/_Level/_LevelAssets/_Props/_Furniture/Computer
-MRUItem29=/Game/_Level/_LevelAssets/_Props/_Furniture/Coffee_Maker
+MRUItem2=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Isaland_PlayerController
+MRUItem3=/Game/_Level/DevLevel
+MRUItem4=/Game/_Level/_LevelAssets/_Props/_Furniture/Lab_Ceiling_Light_On
+MRUItem5=/Game/_Level/_LevelAssets/_Props/_Materials/Truck4_Texture
+MRUItem6=/Game/_Level/_LevelAssets/_Props/_Materials/Truck4_Mat
+MRUItem7=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_On1
+MRUItem8=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Mat_001
+MRUItem9=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Emmission
+MRUItem10=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Mat
+MRUItem11=/Game/_Level/_LevelAssets/_Props/_Furniture/Lab_Ceiling_Light
+MRUItem12=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Texture
+MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/Toothbrush1
+MRUItem14=/Game/_Level/_LevelAssets/_Props/_Furniture/Toothbrush
+MRUItem15=/Game/_Level/_LevelAssets/_Props/_Materials/KitchenMat_Mat
+MRUItem16=/Game/_Level/_LevelAssets/_Props/_Furniture/Kitchen_Mat1
+MRUItem17=/Game/_Level/_LevelAssets/_Props/_Outside/Car3
+MRUItem18=/Game/_Level/_LevelAssets/_Props/_Outside/Car2
+MRUItem19=/Game/_Level/_LevelAssets/_Props/_Outside/Car
+MRUItem20=/Game/_Level/_LevelAssets/_Props/_Outside/Van
+MRUItem21=/Game/_Level/_LevelAssets/_Props/_Outside/Truck
+MRUItem22=/Game/_Level/_LevelAssets/_Props/_Materials/Truck3_Mat
+MRUItem23=/Game/_Level/_LevelAssets/_Props/_Outside/Truck3
+MRUItem24=/Game/_Level/_LevelAssets/_Props/_Materials/Truck3_Texture
+MRUItem25=/Game/_Level/_LevelAssets/_Props/_Materials/Truck2_Mat
+MRUItem26=/Game/_Level/_LevelAssets/_Props/_Materials/Truck1_Mat
+MRUItem27=/Game/_Level/_LevelAssets/_Props/_Outside/Truck2
+MRUItem28=/Game/_Level/_LevelAssets/_Props/_Furniture/Car_Keys
+MRUItem29=/Game/_Level/_LevelAssets/_Props/_Furniture/Monitor
 
 [DetailCategories]
 CombineMeshesToolProperties.OutputObject=True
@@ -2487,6 +2490,36 @@ MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
 EdGraph.Inputs=True
 EdGraph.Outputs=True
+BP_Isaland_PlayerController_C.PlayerController=True
+BP_Isaland_PlayerController_C.Tick=True
+BP_Isaland_PlayerController_C.Cheat Manager=True
+BP_Isaland_PlayerController_C.MouseInterface=True
+BP_Isaland_PlayerController_C.Game=True
+BP_Isaland_PlayerController_C.Input=True
+BP_Isaland_PlayerController_C.WorldPartition=True
+BP_Isaland_PlayerController_C.Controller=True
+BP_Isaland_PlayerController_C.Replication=True
+BP_Isaland_PlayerController_C.Actor=True
+BP_Isaland_PlayerController_C.HLOD=True
+BP_Isaland_PlayerController_C.Physics=True
+BP_Isaland_PlayerController_C.Events=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+FloatingPawnMovement.Variable=True
+FloatingPawnMovement.Sockets=True
+FloatingPawnMovement.FloatingPawnMovement=True
+FloatingPawnMovement.NavMovement=True
+FloatingPawnMovement.Velocity=True
+FloatingPawnMovement.PlanarMovement=True
+FloatingPawnMovement.ComponentTick=True
+FloatingPawnMovement.MovementComponent=True
+FloatingPawnMovement.Tags=True
+FloatingPawnMovement.ComponentReplication=True
+FloatingPawnMovement.Activation=True
+FloatingPawnMovement.Cooking=True
+FloatingPawnMovement.Events=True
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -2715,6 +2748,7 @@ LastLogListing=FBXImport
 /Game/_Level/_LevelAssets/_Props/_Materials/Truck4_Texture.Truck4_Texture=1
 /Game/_Level/_LevelAssets/_Props/_Materials/Truck4_Mat.Truck4_Mat=1
 /Game/NewGameplayBuild/BFL/BPFL_D3Di.BPFL_D3Di=1
+/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Isaland_PlayerController.BP_Isaland_PlayerController=1
 
 [MaterialEditor]
 PrimType=1
