--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -202,6 +202,7 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 OpenAssetsAtExit=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_PlayerController.BP_Island_PlayerController
+OpenAssetsAtExit=/Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_CarpNew.BP_DI_CarpNew
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1485,11 +1486,11 @@ MaterialInstanceConstant=
 BP_DI_CarpNew_C=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NewGameplayBuild/UI/WGP_Ui
-MRUItem1=/Game/_SubtitleSystem/BP_Subtitles
-MRUItem2=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_Gamemode
-MRUItem3=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_PlayerController
-MRUItem4=/Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_CarpNew
+MRUItem0=/Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_CarpNew
+MRUItem1=/Game/NewGameplayBuild/UI/WGP_Ui
+MRUItem2=/Game/_SubtitleSystem/BP_Subtitles
+MRUItem3=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_Gamemode
+MRUItem4=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_PlayerController
 MRUItem5=/Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_Carpenter
 MRUItem6=/Game/NewGameplayBuild/BFL/BPFL_D3Di
 MRUItem7=/Game/_Level/DevLevel
