--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -171,8 +171,10 @@ LastLevel=/Game/_Level/DevLevel
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -199,10 +201,10 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_PlayerController.BP_Island_PlayerController
+OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
+OpenAssetsAtExit=/Game/_Core/BPInterfaces/BPI_Player.BPI_Player
 OpenAssetsAtExit=/Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_CarpNew.BP_DI_CarpNew
+OpenAssetsAtExit=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker.CamSwitchWithTracker
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1443,7 +1445,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails
 StaticMesh=StaticMesh.StaticMeshMaterials.MaterialList,StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.File Path
 MeshNaniteSettings=
 StaticMeshActor=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
-SceneComponent=
+SceneComponent=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 Ceiling_lamp_BP_C=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 CamSwitchWithTracker_C=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 ContainerBP_yellow1_C=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
@@ -1484,38 +1486,44 @@ PostProcessVolume=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Mate
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup
 MaterialInstanceConstant=
 BP_DI_CarpNew_C=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
+SkeletalMeshComponent=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
+K2Node_EnhancedInputAction=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
+DI_Player_C=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
+K2Node_MacroInstance=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
+K2Node_Variable=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
+BillboardComponent=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_CarpNew
-MRUItem1=/Game/NewGameplayBuild/UI/WGP_Ui
-MRUItem2=/Game/_SubtitleSystem/BP_Subtitles
-MRUItem3=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_Gamemode
-MRUItem4=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_PlayerController
-MRUItem5=/Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_Carpenter
-MRUItem6=/Game/NewGameplayBuild/BFL/BPFL_D3Di
-MRUItem7=/Game/_Level/DevLevel
-MRUItem8=/Game/_Level/_LevelAssets/_Props/_Furniture/Lab_Ceiling_Light_On
-MRUItem9=/Game/_Level/_LevelAssets/_Props/_Materials/Truck4_Texture
-MRUItem10=/Game/_Level/_LevelAssets/_Props/_Materials/Truck4_Mat
-MRUItem11=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_On1
-MRUItem12=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Mat_001
-MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Emmission
-MRUItem14=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Mat
-MRUItem15=/Game/_Level/_LevelAssets/_Props/_Furniture/Lab_Ceiling_Light
-MRUItem16=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Texture
-MRUItem17=/Game/_Level/_LevelAssets/_Props/_Materials/Toothbrush1
-MRUItem18=/Game/_Level/_LevelAssets/_Props/_Furniture/Toothbrush
-MRUItem19=/Game/_Level/_LevelAssets/_Props/_Materials/KitchenMat_Mat
-MRUItem20=/Game/_Level/_LevelAssets/_Props/_Furniture/Kitchen_Mat1
-MRUItem21=/Game/_Level/_LevelAssets/_Props/_Outside/Car3
-MRUItem22=/Game/_Level/_LevelAssets/_Props/_Outside/Car2
-MRUItem23=/Game/_Level/_LevelAssets/_Props/_Outside/Car
-MRUItem24=/Game/_Level/_LevelAssets/_Props/_Outside/Van
-MRUItem25=/Game/_Level/_LevelAssets/_Props/_Outside/Truck
-MRUItem26=/Game/_Level/_LevelAssets/_Props/_Materials/Truck3_Mat
-MRUItem27=/Game/_Level/_LevelAssets/_Props/_Outside/Truck3
-MRUItem28=/Game/_Level/_LevelAssets/_Props/_Materials/Truck3_Texture
-MRUItem29=/Game/_Level/_LevelAssets/_Props/_Materials/Truck2_Mat
+MRUItem0=/Game/_Core/_Player/DI_Player
+MRUItem1=/Game/_Core/BPInterfaces/BPI_Player
+MRUItem2=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker
+MRUItem3=/Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_CarpNew
+MRUItem4=/Game/NewGameplayBuild/UI/WGP_Ui
+MRUItem5=/Game/_SubtitleSystem/BP_Subtitles
+MRUItem6=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_Gamemode
+MRUItem7=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_PlayerController
+MRUItem8=/Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_Carpenter
+MRUItem9=/Game/NewGameplayBuild/BFL/BPFL_D3Di
+MRUItem10=/Game/_Level/DevLevel
+MRUItem11=/Game/_Level/_LevelAssets/_Props/_Furniture/Lab_Ceiling_Light_On
+MRUItem12=/Game/_Level/_LevelAssets/_Props/_Materials/Truck4_Texture
+MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/Truck4_Mat
+MRUItem14=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_On1
+MRUItem15=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Mat_001
+MRUItem16=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Emmission
+MRUItem17=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Mat
+MRUItem18=/Game/_Level/_LevelAssets/_Props/_Furniture/Lab_Ceiling_Light
+MRUItem19=/Game/_Level/_LevelAssets/_Props/_Materials/Lab_Ceiling_Light_Texture
+MRUItem20=/Game/_Level/_LevelAssets/_Props/_Materials/Toothbrush1
+MRUItem21=/Game/_Level/_LevelAssets/_Props/_Furniture/Toothbrush
+MRUItem22=/Game/_Level/_LevelAssets/_Props/_Materials/KitchenMat_Mat
+MRUItem23=/Game/_Level/_LevelAssets/_Props/_Furniture/Kitchen_Mat1
+MRUItem24=/Game/_Level/_LevelAssets/_Props/_Outside/Car3
+MRUItem25=/Game/_Level/_LevelAssets/_Props/_Outside/Car2
+MRUItem26=/Game/_Level/_LevelAssets/_Props/_Outside/Car
+MRUItem27=/Game/_Level/_LevelAssets/_Props/_Outside/Van
+MRUItem28=/Game/_Level/_LevelAssets/_Props/_Outside/Truck
+MRUItem29=/Game/_Level/_LevelAssets/_Props/_Materials/Truck3_Mat
 
 [DetailCategories]
 CombineMeshesToolProperties.OutputObject=True
@@ -2591,6 +2599,7 @@ WGP_Ui_C.Localization=True
 WGP_Ui_C.Accessibility=True
 WGP_Ui_C.Rendering=True
 WGP_Ui_C.Navigation=True
+BP_DI_CarpNew_C.Default=True
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -2822,6 +2831,7 @@ LastLogListing=PIE
 /Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Isaland_PlayerController.BP_Isaland_PlayerController=1
 /Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_Gamemode.BP_Island_Gamemode=0
 /Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_CarpNew.BP_DI_CarpNew=0
+/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_PlayerController.BP_Island_PlayerController=1
 
 [MaterialEditor]
 PrimType=1
@@ -3261,4 +3271,5 @@ PrimType=1
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
+ChangeVariableType_Warning=False
 
