--- a/DeepInfection/Saved/Config/WindowsEditor/Engine.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/Engine.ini
@@ -86,10 +86,10 @@ TunnelMulticastEndpoint=
 FlipNormalMapGreenChannel=False
 
 [WindowsApplication.Accessibility]
-StickyKeysHotkey=True
-ToggleKeysHotkey=True
-FilterKeysHotkey=True
-StickyKeysConfirmation=True
-ToggleKeysConfirmation=True
-FilterKeysConfirmation=True
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
