--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=Windows@DRAGON3DINTERAC
 LastExecutedLaunchName=DRAGON3DINTERAC
 LastExecutedPIEPreviewDevice=
@@ -174,7 +174,7 @@ DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -219,7 +219,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/NewGameplayBuild/PlayerCharacters/TheIsland
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1494,17 +1494,17 @@ K2Node_Variable=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materi
 BillboardComponent=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Player/DI_Player
-MRUItem1=/Game/_Core/BPInterfaces/BPI_Player
-MRUItem2=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker
-MRUItem3=/Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_CarpNew
-MRUItem4=/Game/NewGameplayBuild/UI/WGP_Ui
-MRUItem5=/Game/_SubtitleSystem/BP_Subtitles
-MRUItem6=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_Gamemode
-MRUItem7=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_PlayerController
-MRUItem8=/Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_Carpenter
-MRUItem9=/Game/NewGameplayBuild/BFL/BPFL_D3Di
-MRUItem10=/Game/_Level/DevLevel
+MRUItem0=/Game/_Level/DevLevel
+MRUItem1=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker
+MRUItem2=/Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_CarpNew
+MRUItem3=/Game/_Core/BPInterfaces/BPI_Player
+MRUItem4=/Game/_Core/_Player/DI_Player
+MRUItem5=/Game/NewGameplayBuild/UI/WGP_Ui
+MRUItem6=/Game/_SubtitleSystem/BP_Subtitles
+MRUItem7=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_Gamemode
+MRUItem8=/Game/NewGameplayBuild/MapSettings/TheIsalnd/BP_Island_PlayerController
+MRUItem9=/Game/NewGameplayBuild/PlayerCharacters/TheIsland/BP_DI_Carpenter
+MRUItem10=/Game/NewGameplayBuild/BFL/BPFL_D3Di
 MRUItem11=/Game/_Level/_LevelAssets/_Props/_Furniture/Lab_Ceiling_Light_On
 MRUItem12=/Game/_Level/_LevelAssets/_Props/_Materials/Truck4_Texture
 MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/Truck4_Mat
