trims added+fixes
fixed missing textures in wall platforms in factory
added 5 trims

--- a/DeepInfection/Saved/Config/WindowsEditor/Engine.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/Engine.ini
@@ -82,3 +82,6 @@ EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
 
+[/Script/UnrealEd.EditorEngine]
+FlipNormalMapGreenChannel=False
+
