--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -190,7 +190,7 @@ MaterialInstanceConstant=
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
@@ -698,7 +698,7 @@ SpotLight.HLOD=True
 SpotLight.Physics=True
 SpotLight.Networking=True
 SpotLight.Actor=True
-Texture2D.Interchange =True
+Texture2D.Interchange=True
 Stand_C.TransformCommon=True
 Stand_C.Rendering=True
 Stand_C.Replication=True
@@ -802,7 +802,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Level/_LevelAssets/_Environment_Assets/container
+ContentBrowserDrawer.SelectedPaths=/Game/FInalGameBuild/InWorldActors
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
