--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -162,6 +162,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,HeterogeneousVolumes=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,NaniteMeshes=1,NaniteStreamingGeometry=1,VisualizeGPUSkinCache=0,ShaderPrint=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,HeterogeneousVolumes=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,NaniteMeshes=1,NaniteStreamingGeometry=1,VisualizeGPUSkinCache=0,ShaderPrint=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",StrataVisualizationMode="",GroomVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",GPUSkinCacheVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 GridEnabled=False
 SnapScaleEnabled=False
+CurrentPosGridSize=3
 
 [MRU]
 MRUItem0=/Game/_Level/Island
@@ -180,6 +181,7 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
+Common=False
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails
@@ -190,8 +192,10 @@ MaterialInstanceConstant=
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -212,6 +216,8 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
+OpenAssetsAtExit=/Game/FInalGameBuild/Widgets/Console/WGP_DI_Console.WGP_DI_Console
+OpenAssetsAtExit=/Game/FInalGameBuild/PlayerChar/DI_BP_Carpenter.DI_BP_Carpenter
 
 [RootWindow]
 ScreenPosition=X=118.000 Y=44.000
@@ -719,6 +725,110 @@ DecalActor.Cooking=True
 DecalActor.HLOD=True
 DecalActor.Physics=True
 DecalActor.Networking=True
+EditableTextBox.Content=True
+EditableTextBox.Appearance=True
+EditableTextBox.Accessibility=True
+EditableTextBox.Behavior=True
+EditableTextBox.Render Transform=True
+EditableTextBox.Performance=True
+EditableTextBox.Rendering=True
+EditableTextBox.Navigation=True
+EditableTextBox.Localization=True
+DI_BP_Carpenter_C.TransformCommon=True
+DI_BP_Carpenter_C.Animation=True
+DI_BP_Carpenter_C.Mesh=True
+DI_BP_Carpenter_C.Tick=True
+DI_BP_Carpenter_C.ComponentTick=True
+DI_BP_Carpenter_C.Clothing=True
+DI_BP_Carpenter_C.LeaderPoseComponent=True
+DI_BP_Carpenter_C.Physics=True
+DI_BP_Carpenter_C.Collision=True
+DI_BP_Carpenter_C.AnimationRig=True
+DI_BP_Carpenter_C.Lighting=True
+DI_BP_Carpenter_C.Deformer=True
+DI_BP_Carpenter_C.SkinWeights=True
+DI_BP_Carpenter_C.HLOD=True
+DI_BP_Carpenter_C.Rendering=True
+DI_BP_Carpenter_C.PathTracing=True
+DI_BP_Carpenter_C.Mobile=True
+DI_BP_Carpenter_C.Navigation=True
+DI_BP_Carpenter_C.RayTracing=True
+DI_BP_Carpenter_C.VirtualTexture=True
+DI_BP_Carpenter_C.Tags=True
+DI_BP_Carpenter_C.AssetUserData=True
+DI_BP_Carpenter_C.Replication=True
+DI_BP_Carpenter_C.ComponentReplication=True
+DI_BP_Carpenter_C.Activation=True
+DI_BP_Carpenter_C.Variable=True
+DI_BP_Carpenter_C.Cooking=True
+DI_BP_Carpenter_C.Character Movement (General Settings)=True
+DI_BP_Carpenter_C.Character Movement: Walking=True
+DI_BP_Carpenter_C.Character Movement: Jumping / Falling=True
+DI_BP_Carpenter_C.Character Movement: Gravity=True
+DI_BP_Carpenter_C.Character Movement (Networking)=True
+DI_BP_Carpenter_C.Character Movement: Swimming=True
+DI_BP_Carpenter_C.Character Movement: Flying=True
+DI_BP_Carpenter_C.Character Movement: Custom Movement=True
+DI_BP_Carpenter_C.Character Movement (Rotation Settings)=True
+DI_BP_Carpenter_C.Character Movement: Physics Interaction=True
+DI_BP_Carpenter_C.Character Movement=True
+DI_BP_Carpenter_C.Character Movement: Avoidance=True
+DI_BP_Carpenter_C.RootMotion=True
+DI_BP_Carpenter_C.Character Movement: NavMesh Movement=True
+DI_BP_Carpenter_C.NavMovement=True
+DI_BP_Carpenter_C.Velocity=True
+DI_BP_Carpenter_C.PlanarMovement=True
+DI_BP_Carpenter_C.MovementComponent=True
+DI_BP_Carpenter_C.Shape=True
+DI_BP_Carpenter_C.Character=True
+DI_BP_Carpenter_C.Camera=True
+DI_BP_Carpenter_C.Pawn=True
+DI_BP_Carpenter_C.Actor=True
+DI_BP_Carpenter_C.Input=True
+DI_BP_Carpenter_C.WorldPartition=True
+DI_BP_Carpenter_C.Events=True
+PropertyWrapper.Events=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Rendering=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+EditableTextBox.Layout=True
+DI_BP_Carpenter_C.Default=True
+EditableTextBox.Events=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Rendering=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+WGP_DI_Console_C.Designer=True
+WGP_DI_Console_C.Interaction=True
+WGP_DI_Console_C.Input=True
+WGP_DI_Console_C.Appearance=True
+WGP_DI_Console_C.Default=True
+WGP_DI_Console_C.Performance=True
+WGP_DI_Console_C.Layout=True
+WGP_DI_Console_C.Behavior=True
+WGP_DI_Console_C.Render Transform=True
+WGP_DI_Console_C.Localization=True
+WGP_DI_Console_C.Accessibility=True
+WGP_DI_Console_C.Rendering=True
+WGP_DI_Console_C.Navigation=True
+TextBlock.Clipping=False
 
 [AssetEditorToolkitTabLocation]
 /Game/_Core/_Player/DI_Player.DI_Player=1
@@ -738,6 +848,7 @@ DecalActor.Networking=True
 /Game/_Core/_Enemies/Blob_Enemy/Blob_Death_Anim.Blob_Death_Anim=1
 /Game/_Level/_LevelAssets/_Props/_Materials/Fish_Labels/Fish_Label_Burbot_Mat.Fish_Label_Burbot_Mat=1
 /Game/_Level/_LevelAssets/_Props/_Materials/Fish_Labels/Fish_Label_Burbot_Texture.Fish_Label_Burbot_Texture=0
+/Game/FInalGameBuild/PlayerChar/DI_BP_Carpenter.DI_BP_Carpenter=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -870,7 +981,7 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -2134,26 +2245,28 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/MovieScene/MovieR
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/_LevelAssets/_Props/_Materials/Fish_Labels/Fish_Label_Burbot_Texture
-MRUItem1=/Game/_Level/_LevelAssets/_Props/_Materials/Fish_Labels/Fish_Label_Burbot_Mat
-MRUItem2=/Game/_Level/_LevelAssets/_OGFiles/Master_Material
-MRUItem3=/Game/_Core/_Enemies/Blob_Enemy/Blob_Attack_Anim
-MRUItem4=/Game/_Core/_Enemies/Blob_Enemy/Blob_Death_Anim
-MRUItem5=/Game/_Core/_Enemies/Blob_Enemy/Blob_Idle_Anim
-MRUItem6=/Game/_Core/_Enemies/Blob_Enemy/Blob_SpawnBabies_Anim
-MRUItem7=/Game/_Core/_Enemies/Blob_Enemy/Blob
-MRUItem8=/Game/_Core/_Enemies/Blob_Enemy/Blob_Mat
-MRUItem9=/Game/_Core/_Enemies/Blob_Enemy/Blob_Texture
-MRUItem10=/Game/_Core/_Enemies/Crawler_Enemy/Crawler_Mat
-MRUItem11=/Game/_Level/_LevelAssets/_OGFiles/MasterM_instance
-MRUItem12=/Game/_Level/_LevelAssets/_Environment_Assets/trims/trim_1
-MRUItem13=/Game/_Level/_LevelAssets/_Environment_Assets/trims/trim_001
-MRUItem14=/Game/_Level/_LevelAssets/_Props/_Materials/Art_Picture3_Mat
-MRUItem15=/Game/_Level/_LevelAssets/_Props/_Materials/Art_Picture2_Mat1
-MRUItem16=/Game/_Level/_LevelAssets/_Props/_Materials/Art_Picture1_Mat
-MRUItem17=/Game/_Level/DevLevel
-MRUItem18=/Game/_Core/_Player/DI_Player
-MRUItem19=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker
+MRUItem0=/Game/FInalGameBuild/PlayerChar/DI_BP_Carpenter
+MRUItem1=/Game/FInalGameBuild/Widgets/Console/WGP_DI_Console
+MRUItem2=/Game/_Level/_LevelAssets/_Props/_Materials/Fish_Labels/Fish_Label_Burbot_Texture
+MRUItem3=/Game/_Level/_LevelAssets/_Props/_Materials/Fish_Labels/Fish_Label_Burbot_Mat
+MRUItem4=/Game/_Level/_LevelAssets/_OGFiles/Master_Material
+MRUItem5=/Game/_Core/_Enemies/Blob_Enemy/Blob_Attack_Anim
+MRUItem6=/Game/_Core/_Enemies/Blob_Enemy/Blob_Death_Anim
+MRUItem7=/Game/_Core/_Enemies/Blob_Enemy/Blob_Idle_Anim
+MRUItem8=/Game/_Core/_Enemies/Blob_Enemy/Blob_SpawnBabies_Anim
+MRUItem9=/Game/_Core/_Enemies/Blob_Enemy/Blob
+MRUItem10=/Game/_Core/_Enemies/Blob_Enemy/Blob_Mat
+MRUItem11=/Game/_Core/_Enemies/Blob_Enemy/Blob_Texture
+MRUItem12=/Game/_Core/_Enemies/Crawler_Enemy/Crawler_Mat
+MRUItem13=/Game/_Level/_LevelAssets/_OGFiles/MasterM_instance
+MRUItem14=/Game/_Level/_LevelAssets/_Environment_Assets/trims/trim_1
+MRUItem15=/Game/_Level/_LevelAssets/_Environment_Assets/trims/trim_001
+MRUItem16=/Game/_Level/_LevelAssets/_Props/_Materials/Art_Picture3_Mat
+MRUItem17=/Game/_Level/_LevelAssets/_Props/_Materials/Art_Picture2_Mat1
+MRUItem18=/Game/_Level/_LevelAssets/_Props/_Materials/Art_Picture1_Mat
+MRUItem19=/Game/_Level/DevLevel
+MRUItem20=/Game/_Core/_Player/DI_Player
+MRUItem21=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -2441,6 +2554,10 @@ bConvertSceneUnit=False
 
 [DetailCategoriesAdvanced]
 MaterialEditorInstanceConstant.General=False
+EditableTextBox.Localization=True
+PropertyWrapper.Variable=False
+EditableTextBox.Behavior=True
+EditableTextBox.Accessibility=False
 
 [MaterialInstanceEditor]
 bShowGrid=True
@@ -2500,8 +2617,8 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Object=
 StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent=
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 
