--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -232,6 +232,7 @@ DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
@@ -258,8 +259,6 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-OpenAssetsAtExit=/Game/_Core/_AdriaanNewShit/BPI/BPI_Cap_DI.BPI_Cap_DI
 OpenAssetsAtExit=/Game/_Core/_AdriaanNewShit/Player/BP_Player_DI.BP_Player_DI
 OpenAssetsAtExit=/Game/_Core/_AdriaanNewShit/IteractActors/BP_Captail_DI.BP_Captail_DI
 
@@ -1428,6 +1427,7 @@ Blueprint.Thumbnail=True
 /Game/_Core/_AdriaanNewShit/Player/PlayerAnimations/ABP_Anims_DI.ABP_Anims_DI=1
 /Game/_Core/_Player/_Widgets/_Widgets/MainMenuStuff/BP_StartNewGame.BP_StartNewGame=1
 /Game/_Level/_adriaanstupitmeterials/red_Glowie.red_Glowie=1
+/Game/_Core/_AdriaanNewShit/BPI/BPI_Cap_DI.BPI_Cap_DI=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
