--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -231,15 +231,17 @@ LevelInstance=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformC
 LevelScriptBlueprint=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
 CharacterMovementComponent=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform
 DirectionalLight=CapsuleComponent.Physics.ConstraintsGroup,DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform
-BP_CutceneSave_DI_C=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform
+BP_CutceneSave_DI_C=
 BP_Gameinst_DI_C=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform
+MulticastInlineDelegatePropertyWrapper=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform
 
 [EditorStartup]
 LastLevel=/Game/_Level/Cutscenes
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=UserDefinedStructureEditor
@@ -269,14 +271,6 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=StaticMeshEditor
-OpenAssetsAtExit=/Game/_Core/_AdriaanNewShit/Player/BP_Player_DI.BP_Player_DI
-OpenAssetsAtExit=/Game/_Core/_GameCore/Cutcene/CutceneLoaderChar.CutceneLoaderChar
-OpenAssetsAtExit=/Game/_Core/_AdriaanNewShit/BPI/LVLBpi/BPI_LVL_Island_DI.BPI_LVL_Island_DI
-OpenAssetsAtExit=/Game/_Core/_AdriaanNewShit/GameSettings/BP_Gameinst_DI.BP_Gameinst_DI
-OpenAssetsAtExit=/Game/_Core/_AdriaanNewShit/SaveSystems/CutceneSaveSystem/BP_CutceneSave_DI.BP_CutceneSave_DI
-OpenAssetsAtExit=/Game/_Core/_AdriaanNewShit/SaveSystems/CutceneSaveSystem/Stuc_CutCene_Save_DI.Stuc_CutCene_Save_DI
-OpenAssetsAtExit=/Game/_Core/_AdriaanNewShit/BPI/SaveSystem/BPI_SaveSystem.BPI_SaveSystem
 
 [RootWindow]
 ScreenPosition=X=1.000 Y=1.000
@@ -1619,6 +1613,11 @@ UserDefinedStruct.Structure=True
 /Game/_Core/_GameCore/Cutcene/CutceneLoaderChar.CutceneLoaderChar=1
 /Game/_Level/Island.Island:PersistentLevel.Island=1
 /Game/_Level/Cutscenes.Cutscenes:PersistentLevel.Cutscenes=1
+/Game/_Core/_AdriaanNewShit/BPI/LVLBpi/BPI_LVL_Island_DI.BPI_LVL_Island_DI=1
+/Game/_Core/_AdriaanNewShit/SaveSystems/CutceneSaveSystem/BP_CutceneSave_DI.BP_CutceneSave_DI=1
+/Game/_Core/_AdriaanNewShit/SaveSystems/CutceneSaveSystem/Stuc_CutCene_Save_DI.Stuc_CutCene_Save_DI=1
+/Game/_Core/_AdriaanNewShit/GameSettings/BP_Gameinst_DI.BP_Gameinst_DI=1
+/Game/_Core/_AdriaanNewShit/BPI/SaveSystem/BPI_SaveSystem.BPI_SaveSystem=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1703,7 +1702,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Core/_AdriaanNewShit/BPI/LVLBpi
+ContentBrowserTab1.SelectedPaths=/Game/_Core/_AdriaanNewShit/SaveSystems/CutceneSaveSystem
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
