Save after cras But If im Correct all is oke IDKN

--- a/DeepInfection/Config/DefaultEngine.ini
+++ b/DeepInfection/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/_Level/Spasch_Screen.Spasch_Screen
 EditorStartupMap=/Game/_Level/Island.Island
 GlobalDefaultGameMode=/Game/_Core/_GameCore/IF_Gamemode.IF_Gamemode_C
 TransitionMap=/Game/_Level/DemoMap.DemoMap
+GameInstanceClass=/Game/_Core/_AdriaanNewShit/GameSettings/BP_Gameinst_DI.BP_Gameinst_DI_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
